--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#para definir el puerto donde escucha el servidor
+server.port=91
 
+#para definir el formato de despliegue de fecha/hora en el log de la consola
+logging.pattern.dateformat= dd/MM hh:mm
+
+#para eliminar el mensaje o logo de spring
+spring.main.banner-mode=off
+
+#en desarrollo el caché del servidor va a ser (false) y en producción va a ser (true)
+spring.thymeleaf.cache=false
+
+#MySql conexion
+spring.datasource.url=jdbc:mysql://localhost:3306/practica?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_practica
+spring.datasource.password=la_Clave.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+ 
+#mostrar información en el log
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
